--- a/README
+++ b/README
@@ -21,8 +21,8 @@ SYNOPSIS
 
         # Later:
 
-        $graph->add_edge(%{ $edge->as_hash }); # Adds only the data that is not the same as GraphViz's defaults
-        $graph->add_edge(%{ $edge->as_canon_hash }); # Adds all the data, including hardcoded defaults
+        $graph->add_edge(from => a => to => b => %{ $edge->as_hash }); # Adds only the data that is not the same as GraphViz's defaults
+        $graph->add_edge(from => a => to => b => %{ $edge->as_canon_hash }); # Adds all the data, including hardcoded defaults
 
 DESCRIPTION
     Working with GraphViz2, I found myself frequently needing shared styles
