--- a/Changes
+++ b/Changes
@@ -1,6 +1,12 @@
 Release history for GraphViz2-Abstract-Edge
 
 {{$NEXT}}
+ - Factor out constants into GraphViz2::Abstract::Util::Constants
+
+ [Dependencies::Stats]
+ - Dependencies changed, see Changes.deps{,.all,.dev} for details
+ - develop: +2 ↑1 -2
+ - runtime: +1 -1
 
 0.001000 2013-11-30T17:03:21Z
  - First version.
